# pyWebUntis

./: .gitignore  README.md  pyproject.toml  setup.py
Untis/: error.py  network.py  storage.py
pyWebUntis/: network.py  storage.py
